--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 html, body, #root {
-  margin: 0;      /* Removes any default margin */
-  padding: 0;     /* Removes any default padding */
-  width: 100%;    /* Ensures the full width of the viewport */
-  height: 100%;   /* Ensures the full height of the viewport */
+  margin: 0;      
+  padding: 0;     
+  width: 100%;    
+  height: 100%;  
 }
 
 a {
